# PDFLLM

./: .env.example  .gitignore  CLAUDE.md  README.md  TEST_GUIDE.md  pyproject.toml  requirements.txt
docs/: architecture.md  cross_page_table_analysis.md  financial_report_parsing_research.md  implementation_plan.md
scripts/: export_tables_to_csv.py  merge_cross_page_tables.py  run.py  test_extraction.py  test_extraction_parallel.py  test_table_classifier.py
src/: __init__.py  pipeline.py
src/extraction/: __init__.py  extractor.py  prompts.py
src/indexing/: __init__.py  search.py  store.py
src/infra/: config.py  db.py  embedder.py  llm_client.py  logger.py  models.py
src/ingestion/: __init__.py  chunker.py  extractor.py  pdf_extractor.py  table_classifier.py
src/llm/: __init__.py
src/utils/: config.py  env_setup.py  logger.py
tests/: test_extraction.py  test_indexing.py  test_ingestion.py  test_pipeline.py
